--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
   font-family: "Gloria Hallelujah", cursive;
   width: 100%;
   height: 100vh;
-  background-image: url("/public/pizza-time-background.jpg");
+  background-image: url("/public/pizza-time-background-blur.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -32,7 +32,8 @@ main {
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 50%;
+  flex-direction: column;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -53,8 +54,6 @@ footer {
 .form-container form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  text-align: center;
 
   & select {
     display: flex;
@@ -78,19 +77,26 @@ footer {
     & option {
       text-align: center;
       border-bottom: 1px solid black;
+      cursor: pointer;
+    }
+
+    &:focus {
+      background-color: #ffeace;
+      color: black;
     }
   }
 
   & label {
     font-size: 1.75rem;
     color: white;
+    font-weight: bold;
   }
 
   & button {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 4rem 0rem;
+    margin: 2rem 0rem;
     height: 2.5rem;
     border: 2px solid black;
     font-family: "Gloria Hallelujah", cursive;
@@ -135,4 +141,20 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.result-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  top: 119%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  gap: 0.25rem;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
