--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ header {
   top: 0;
   width: 100%;
   height: 5rem;
-  background-color: #ffeace;
+  background-color: rgba(255, 234, 206, 0.5);
   font-size: 1.25rem;
   border-bottom: 4px solid #a36953;
 }
@@ -46,7 +46,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 5rem;
-  background-color: #ffeace;
+  background-color: rgba(255, 234, 206, 0.5);
   font-size: 1.5rem;
   border-top: 4px solid #a36953;
 }
@@ -54,14 +54,16 @@ footer {
 .form-container form {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 0.35rem;
 
   & select {
     display: flex;
-    width: 75%;
     height: 2.5rem;
+    width: 18rem;
     font-family: "Gloria Hallelujah", cursive;
     font-weight: bold;
-    font-size: 1.1rem;
+    font-size: 1rem;
     outline: none;
     color: white;
     border: 4px solid white;
@@ -78,6 +80,7 @@ footer {
       text-align: center;
       border-bottom: 1px solid black;
       cursor: pointer;
+      font-weight: bold;
     }
 
     &:focus {
@@ -95,10 +98,9 @@ footer {
   & button {
     display: flex;
     justify-content: center;
-    align-items: center;
     margin: 2rem 0rem;
-    height: 2.5rem;
-    border: 2px solid black;
+    height: 3rem;
+    width: 10rem;
     font-family: "Gloria Hallelujah", cursive;
     font-weight: bold;
     font-size: 1.2rem;
@@ -149,7 +151,7 @@ footer {
   align-items: center;
   flex-direction: column;
   position: absolute;
-  top: 119%;
+  top: 116%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
