--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,17 @@
+:root {
+  --color-italian-green: rgb(0, 140, 69);
+  --color-italian-green-alpha: rgba(0, 140, 69, 0.25);
+
+  --color-italian-white: rgb(244, 245, 240);
+  --color-italian-white-alpha: rgba(244, 245, 240, 0.25);
+
+  --color-italian-red: rgb(205, 33, 42);
+  --color-italian-red-alpha: rgba(205, 33, 42, 0.25);
+
+  --primary-color: #ffeace52;
+  --secondary-color: #a36a534f;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -23,9 +37,9 @@ header {
   top: 0;
   width: 100%;
   height: 5rem;
-  background-color: rgba(255, 234, 206, 0.5);
+  background-color: var(--primary-color);
   font-size: 1.25rem;
-  border-bottom: 4px solid #a36953;
+  border-bottom: 5px solid var(--color-italian-green);
 }
 
 main {
@@ -46,9 +60,9 @@ footer {
   bottom: 0;
   width: 100%;
   height: 5rem;
-  background-color: rgba(255, 234, 206, 0.5);
+  background-color: var(--primary-color);
   font-size: 1.5rem;
-  border-top: 4px solid #a36953;
+  border-top: 5px solid var(--color-italian-red);
 }
 
 .form-container form {
@@ -56,6 +70,10 @@ footer {
   flex-direction: column;
   align-items: center;
   gap: 0.35rem;
+
+  & div {
+    gap: 0.35rem
+  }
 
   & select {
     display: flex;
@@ -93,6 +111,10 @@ footer {
     font-size: 1.75rem;
     color: white;
     font-weight: bold;
+    text-decoration: underline;
+    text-decoration-color: var(--color-italian-green);
+    text-decoration-thickness: 2.5px;
+    text-decoration-style: wavy;
   }
 
   & button {
