--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ main {
   justify-content: center;
   position: absolute;
   flex-direction: column;
-  top: 45%;
+  top: 42%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -59,10 +59,24 @@ footer {
   align-items: center;
   bottom: 0;
   width: 100%;
-  height: 5rem;
+  height: 4rem;
   background-color: var(--primary-color);
   font-size: 1.5rem;
   border-top: 5px solid var(--color-italian-red);
+
+  & h3 {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.75rem;
+
+    & img {
+      width: 1.75rem;
+      height: 1.75rem;
+      text-align: center;
+    }
+  }
 }
 
 .form-container form {
@@ -70,28 +84,31 @@ footer {
   flex-direction: column;
   align-items: center;
   gap: 0.35rem;
+  background-color: rgba(0, 0, 0, 0.45);
+  padding: 0.75rem 1rem 1.5rem 1rem;
 
   & div {
-    gap: 0.35rem
+    gap: 0.2rem;
   }
 
   & select {
     display: flex;
-    height: 2.5rem;
-    width: 18rem;
+    height: 2.75rem;
+    width: 15rem;
     font-family: "Gloria Hallelujah", cursive;
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 1.25rem;
     outline: none;
-    color: white;
-    border: 4px solid white;
+    color: black;
+    border: 4px solid black;
     cursor: pointer;
-    background-color: #a36953;
+    background-color: #ffeace;
     transition: background-color 0.5s ease;
 
     &:hover {
-      background-color: #ffeace;
+      background-color: var(--color-italian-white);
       color: black;
+      cursor: pointer;
     }
 
     & option {
@@ -100,17 +117,11 @@ footer {
       cursor: pointer;
       font-weight: bold;
     }
-
-    &:focus {
-      background-color: #ffeace;
-      color: black;
-    }
   }
 
   & label {
     font-size: 1.75rem;
-    color: white;
-    font-weight: bold;
+    color: var(--color-italian-white);
     text-decoration: underline;
     text-decoration-color: var(--color-italian-green);
     text-decoration-thickness: 2.5px;
@@ -120,21 +131,21 @@ footer {
   & button {
     display: flex;
     justify-content: center;
-    margin: 2rem 0rem;
+    margin: 2rem 0rem 0.2rem;
     height: 3rem;
     width: 10rem;
     font-family: "Gloria Hallelujah", cursive;
     font-weight: bold;
     font-size: 1.2rem;
-    color: white;
-    border: 4px solid white;
+    color: var(--color-italian-white);
+    border: 4px solid black;
     cursor: pointer;
-    background-color: #a36953;
+    background-color: var(--color-italian-green);
     transition: background-color 0.5s ease;
 
     &:hover {
-      background-color: #ffeace;
-      color: black;
+      background-color: var(--color-italian-red);
+      color: var(--color-italian-white);
     }
   }
 }
@@ -173,7 +184,7 @@ footer {
   align-items: center;
   flex-direction: column;
   position: absolute;
-  top: 116%;
+  top: 120%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
