--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,16 +1,18 @@
-:root {
-  --color-italian-green: rgb(0, 140, 69);
-  --color-italian-green-alpha: rgba(0, 140, 69, 0.25);
+$color-green: rgb(0, 140, 69);
 
-  --color-italian-white: rgb(244, 245, 240);
-  --color-italian-white-alpha: rgba(244, 245, 240, 0.25);
+$color-green-alpha: rgba(0, 140, 69, 0.25);
 
-  --color-italian-red: rgb(205, 33, 42);
-  --color-italian-red-alpha: rgba(205, 33, 42, 0.25);
+$color-white: rgb(244, 245, 240);
 
-  --primary-color: #ffeace52;
-  --secondary-color: #a36a534f;
-}
+$color-white-alpha: rgba(244, 245, 240, 0.25);
+
+$color-red: rgb(205, 33, 42);
+
+$color-red-alpha: rgba(205, 33, 42, 0.25);
+
+$primary-color: #ffeace52;
+
+$secondary-color: #a36a534f;
 
 * {
   margin: 0;
@@ -37,9 +39,9 @@ header {
   top: 0;
   width: 100%;
   height: 5rem;
-  background-color: var(--primary-color);
+  background-color: $primary-color;
   font-size: 1.25rem;
-  border-bottom: 5px solid var(--color-italian-green);
+  border-bottom: 5px solid $color-green;
 }
 
 main {
@@ -50,33 +52,6 @@ main {
   top: 42%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-
-footer {
-  display: flex;
-  position: absolute;
-  justify-content: center;
-  align-items: center;
-  bottom: 0;
-  width: 100%;
-  height: 4rem;
-  background-color: var(--primary-color);
-  font-size: 1.5rem;
-  border-top: 5px solid var(--color-italian-red);
-
-  & h3 {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 0.75rem;
-
-    & img {
-      width: 1.75rem;
-      height: 1.75rem;
-      text-align: center;
-    }
-  }
 }
 
 .form-container form {
@@ -106,7 +81,7 @@ footer {
     transition: background-color 0.5s ease;
 
     &:hover {
-      background-color: var(--color-italian-white);
+      background-color: $color-white;
       color: black;
       cursor: pointer;
     }
@@ -121,9 +96,9 @@ footer {
 
   & label {
     font-size: 1.75rem;
-    color: var(--color-italian-white);
+    color: $color-white;
     text-decoration: underline;
-    text-decoration-color: var(--color-italian-green);
+    text-decoration-color: $color-green;
     text-decoration-thickness: 2.5px;
     text-decoration-style: wavy;
   }
@@ -137,15 +112,15 @@ footer {
     font-family: "Gloria Hallelujah", cursive;
     font-weight: bold;
     font-size: 1.2rem;
-    color: var(--color-italian-white);
+    color: $color-white;
     border: 4px solid black;
     cursor: pointer;
-    background-color: var(--color-italian-green);
+    background-color: $color-green;
     transition: background-color 0.5s ease;
 
     &:hover {
-      background-color: var(--color-italian-red);
-      color: var(--color-italian-white);
+      background-color: $color-red;
+      color: $color-white;
     }
   }
 }
@@ -189,7 +164,34 @@ footer {
   transform: translate(-50%, -50%);
   width: 100%;
   gap: 0.25rem;
-  color: white;
+  color: $color-white;
   font-size: 1.5rem;
   font-weight: bold;
+}
+
+footer {
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  bottom: 0;
+  width: 100%;
+  height: 4rem;
+  background-color: $primary-color;
+  font-size: 1.5rem;
+  border-top: 5px solid $color-red;
+
+  & h3 {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.75rem;
+
+    & img {
+      width: 1.75rem;
+      height: 1.75rem;
+      text-align: center;
+    }
+  }
 }
